Fixed LTR Cropper stylesheet

--- a/assets/sass/custom/cropper.scss
+++ b/assets/sass/custom/cropper.scss
@@ -22,7 +22,7 @@
 
           user-select: none;
 
-  direction: ltr;
+  direction: rtl;
   -ms-touch-action: none;
       touch-action: none
 }
@@ -96,7 +96,7 @@
 
 .cropper-dashed.dashed-v {
   top: 0;
-  left: 33.33333%;
+  right: 33.33333%;
   width: 33.33333%;
   height: 100%;
   border-right-width: 1px;
@@ -106,7 +106,7 @@
 .cropper-center {
   position: absolute;
   top: 50%;
-  left: 50%;
+  right: 50%;
 
   display: block;
 
@@ -126,14 +126,14 @@
 
 .cropper-center:before {
   top: 0;
-  left: -3px;
+  right: -3px;
   width: 7px;
   height: 1px
 }
 
 .cropper-center:after {
   top: -3px;
-  left: 0;
+  right: 0;
   width: 1px;
   height: 7px
 }
@@ -153,7 +153,7 @@
 
 .cropper-face {
   top: 0;
-  left: 0;
+  right: 0;
 
   background-color: #fff;
 }
@@ -171,21 +171,21 @@
 
 .cropper-line.line-n {
   top: -3px;
-  left: 0;
+  right: 0;
   height: 5px;
   cursor: n-resize
 }
 
 .cropper-line.line-w {
   top: 0;
-  left: -3px;
+  right: -3px;
   width: 5px;
   cursor: w-resize
 }
 
 .cropper-line.line-s {
   bottom: -3px;
-  left: 0;
+  right: 0;
   height: 5px;
   cursor: s-resize
 }
@@ -200,29 +200,29 @@
 
 .cropper-point.point-e {
   top: 50%;
-  right: -3px;
+  left: -3px;
   margin-top: -3px;
   cursor: e-resize
 }
 
 .cropper-point.point-n {
   top: -3px;
-  left: 50%;
+  right: 50%;
   margin-left: -3px;
   cursor: n-resize
 }
 
 .cropper-point.point-w {
   top: 50%;
-  left: -3px;
+  right: -3px;
   margin-top: -3px;
   cursor: w-resize
 }
 
 .cropper-point.point-s {
   bottom: -3px;
-  left: 50%;
-  margin-left: -3px;
+  right: 50%;
+  margin-right: -3px;
   cursor: s-resize
 }
 
@@ -234,13 +234,13 @@
 
 .cropper-point.point-nw {
   top: -3px;
-  left: -3px;
+  right: -3px;
   cursor: nw-resize
 }
 
 .cropper-point.point-sw {
   bottom: -3px;
-  left: -3px;
+  right: -3px;
   cursor: sw-resize
 }
 
@@ -280,7 +280,7 @@
 
 .cropper-point.point-se:before {
   position: absolute;
-  right: -50%;
+  left: -50%;
   bottom: -50%;
   display: block;
   width: 200%;
